Updated Creator class